--- a/templates/image.html
+++ b/templates/image.html
@@ -121,7 +121,7 @@
                 <br>
                 <div class="col-lg-12 text-left">
                     <br>
-                    <h3 class="section-subheading text-muted">Blurring and Unsharp Masking</h3>
+                    <h3 class="section-subheading text-muted">Blurring and Masking</h3>
                     <br>
                 </div>
                 <div class="col-lg-12 text-left">
