--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -78,7 +78,7 @@
                 <div class="row whitespace" style="padding-top: -150px">
                   <div class="col-md-12">
 
-                    <div id="vizContainer" style="padding-left: 25px" style="width:1100px; height:700px;"></div>
+                    <div id="vizContainer" style="padding-left: 25px" style="width:1100px; height:800px;"></div>
 
                   </div>
 
@@ -95,18 +95,85 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-lg-12 text-center">
-                    <h3 style="color: Black" class="section-heading text-uppercase">How do we know that a patient has Retinopathy?</h3>
+                    <h3 style="color: Black" class="section-heading text-uppercase">How do we know that a patient has
+                      Retinopathy?</h3>
                     <br>
-                    <img src="../static/images/retinopathy.jpeg" alt="">
+                    <img src="../static/images/retinopathy.jpeg" alt="" style="width:550px; height:300px;">
                     <p><sup id="cite_ref-2" class="reference"><a
                           href="https://www.eyeops.com/contents/our-services/eye-diseases/diabetic-retinopathy">[1]</a></sup>
                     </p>
                   </div>
                   <div class="col-lg-12 text-left">
+                    <h4 class="section-subheading text-muted">Diabetic retinopathy grading and classification <sup
+                        id="cite_ref-2" class="reference"><a href="http://eyesteve.com/diabetic-retinopathy-grading/">[2]</a></sup></h4>
+
+                  </div>
+                  <div class="col-lg-12 text-left">
+                    <div id="stages-table">
+                      <table class="table table-sm table-bordered">
+                        <thead>
+                          <tr>
+                            <th scope="col">Mild</th>
+                            <th scope="col">Moderate</th>
+                            <th scope="col">Severe</th>
+                            <th scope="col">Proliferative</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td id="mild-desc">
+                              <br>
+                              <br>
+                              *&nbsp;Microaneurysms ONLY.
+                            </td>
+                            <td id="mod-desc">
+                              <p>
+                                *&nbsp;More than just microaneurysms.
+                              </p>
+                              <p>
+                                *&nbsp;With or without cotton-wool spots.
+                              </p>
+                              <p>
+                                *&nbsp;Venous beading,
+                                <br>
+                                or intraretinal microvascular abnormality (IRMA).
+                              </p>
+
+                            </td>
+                            <td id="sev-desc">
+                              <p>*&nbsp;20 or more intraretinal hemorrhages (dot blot hemorrhages) in each of all
+                                four quadrant.
+                              </p>
+                              <p>
+                                *&nbsp;Definite venous beading in 2 or more quadrants.
+                              </p>
+                              <p>
+                                *&nbsp;IRMA in 1 or more quadrants.
+                              </p>
+                            </td>
+                            <td id="pro-desc">
+                              <p>
+                                Either:
+                                <br>
+                                *&nbsp; Definite neovascularization.
+                              </p>
+                              <p>
+                                Or:
+                                <br>
+                                *&nbsp; Preretinal or vitreous hemorrhage.
+                              </p>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 text-left">
                     <p><b>Microaneurysms</b> are the earliest clinically visible changes of diabetic retinopathy. They
                       are localized capillary dilatations which are usually saccular (round). They appear as small red
                       dots which are often in clusters, but may occur in isolation</p>
-                    <p><b>Hemorrhages</b> may be ‘dot’ or’ blot’ shaped (termed ‘dot/blot hemorrhages’) or flame shaped
+                    <p><b>Hemorrhages</b> may be ‘dot’ or’ blot’ shaped (termed ‘dot/blot hemorrhages’) or flame
+                      shaped
                       depending upon their depth within the retina. The capillary network in the posterior retina is
                       found in two layers; a superficial one in the nerve fiber layer and a deeper on within the inner
                       nuclear layer.</p>
@@ -123,14 +190,16 @@
                       disruption of axoplasmic flow. Cotton-wool spots are common and one or two do not require
                       intervention. However, multiple cotton wool spots (more than 6 in one eye) indicate generalized
                       retinal ischaemia and this is regarded as a pre-proliferative state.</p>
-                    <p><b>Venous dilatation</b>, beading and duplication occur as retinal ischaemia progresses. Beading
+                    <p><b>Venous dilatation</b>, beading and duplication occur as retinal ischaemia progresses.
+                      Beading
                       is a useful sign of diffuse retinal ischaemia. Venous dilatation is seen early in diabetic
                       retinopathy but is a rather subjective diagnosis.
                     </p>
-                    <p>Typically, preproliferative retinopathy will consist of multiple cotton wool spots, multiple dot
+                    <p>Typically, preproliferative retinopathy will consist of multiple cotton wool spots, multiple
+                      dot
                       and blot hemorrhages, venous changes and intra-retinal microvascular abnormalities.
                       <sup id="cite_ref-2" class="reference"><a
-                          href="http://www.glycosmedia.com/education/diabetic-retinopathy/diabetic-retinopathy-features-of-diabetes-microaneurysms/">[2]</a></sup>
+                          href="http://www.glycosmedia.com/education/diabetic-retinopathy/diabetic-retinopathy-features-of-diabetes-microaneurysms/">[3]</a></sup>
                     </p>
                     <br>
                   </div>
